# nuitka-test

./: README.md  pyproject.toml
.github/workflows/: build.yaml  tool-nuitka-config.yaml
cli/: __main__.py  cli_code.py
mypkg/: __init__.py  __main__.py  cli.py
