[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9" ]

[project]
name = "CLI"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["click"]

[project.scripts]
cli = "cli.cli_code:my_cli"

[tool.uv]
# Package is at root level, not in "./src/".
build-backend.module-root = ""
